--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="D:\Angela Yu Web Programming camp\Web Development\HTML - Personal Site\Images\martynas.small.jpg" alt=""></td>
+      <td><img src="https://github.com/Martynsan/cv/blob/main/Images/martynas.small.jpg" alt=""></td>
       <td>  <h1>Martynas</h1>
         <p><em><a href="https://www.flexblow.com/">Frezuotojas</a>,<strong> HD Analytics</strong></em></p>
         <p> I like study languages and read books</p></td>
